--- a/Bagging.ipynb
+++ b/Bagging.ipynb
@@ -597,10 +597,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'[]' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    }
+   ],
    "source": [
-    "<img src = './tree.png'>"
+    "![](img src = './tree.png')"
    ]
   },
   {
