--- a/Bagging.ipynb
+++ b/Bagging.ipynb
@@ -597,21 +597,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "'[]' is not recognized as an internal or external command,\n",
-      "operable program or batch file.\n"
-     ]
-    }
-   ],
    "source": [
-    "![](img src = './tree.png')"
+    "![Decision Tree](https://github.com/sandivya/Trees-and-Ensembles/blob/master/tree.png)"
    ]
   },
   {
